--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -1,21 +1,20 @@
-name: 'Docker image'
-
+name: Publish Docker image
 on:
-  push:
-    branches:
-      - 'master'
-    tags:
-      - 'v*'
+  release:
+    types: [published]
 jobs:
-  image:
-    runs-on: 'ubuntu-latest'
+  push_to_registry:
+    name: Push Docker image to GitHub Packages
+    runs-on: ubuntu-latest
     steps:
-      - uses: 'actions/checkout@v2'
-      - uses: 'docker/build-push-action@v1'
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
         with:
-          repository     : 'minicliposs/gonsul'
-          username       : ${{ secrets.DOCKER_USERNAME }}
-          password       : ${{ secrets.DOCKER_PASSWORD }}
-          add_git_labels : true
-          tag_with_ref   : true
-          tag_with_sha   : true
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: rentpath/gonsul/gonsul
+          tag_with_ref: true
+
