fix(gha-pipeline): push to GHCR instead of GPR

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -1,20 +1,28 @@
-name: Publish Docker image
+  
+name: Docker Build
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - 'master'
+  pull_request:
 jobs:
-  push_to_registry:
-    name: Push Docker image to GitHub Packages
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: rentpath/gonsul/gonsul
-          tag_with_ref: true
-
+    - uses: actions/checkout@v2
+    - run: echo "DO_PUSH=true" >> $GITHUB_ENV
+      shell: bash
+      if: github.ref == 'refs/heads/master'
+    - run: echo "DO_PUSH=false" >> $GITHUB_ENV
+      shell: bash
+      if: github.ref != 'refs/heads/master'
+    - uses: docker/build-push-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.GHCR_USER_NAME }}
+        password: ${{ secrets.GHCR_USER_PAT }}
+        repository: rentpath/${{ github.repository }}
+        tag_with_ref: true
+        tag_with_sha: true
+        tags: latest,v3.1.1
+        push: ${{ env.DO_PUSH }}
